# CareerConnect-System

./: .env.example  .gitignore  README.md  alembic.ini  celery_config.py  celery_worker.py  main.py  pyproject.toml  task_registry.py  test.py  test_chatbot.html
alembic/: env.py
alembic/versions/: 0d3a5061906a_make_password_nullable_for_oauth_users.py  1583e33997af_rename_tables_update_relations_and_.py  1caad9fc1142_initial_migration.py  1eba0960e2c4_rename_metadata_column_in_chatbot_.py  2762c175a875_initial_migration.py  2ab26136801b_add_file_path_and_filename_to_user_.py  543e9137fa67_rename_chatbot_conversations_to_chat_.py  55783cff139b_add_embedding_columns_to_resume_and_job.py  591f61c5ee52_rename_conservation_metadata_to_.py  70af110a30bb_description.py  7bd2d14259e7_add_chat_model.py  7e25ccd95566_delete_table_ai_bot_applicants.py  81a5d6f06822_rename_applicant_to_user.py  93da3cd728a9_merge_heads.py  add_team_invitations_table.py  b06caab547d8_create_refresh_tokens_table.py  b2f8db845aa2_add_user_resume_table.py  caef8e9084d0_add_job_application_id_fk_to_reports.py  d649239bfa8c_add_google_id_role_to_users_and_create_.py  f65a69d701de_fix_column_name.py  fa81e4cb8827_remove_conversation_metadata_column_.py
app/core/: auth.py  config.py  container.py  dependency.py  llm_client.py  logger.py  oauth.py  rbac.py  redis_key.py  security.py
app/db/: base.py  careerconnect_db.sql  session.py
task/: __init__.py  cv_parsing_task.py  message_batch_worker.py  send_email_invitation_task.py  summarization_worker.py
uploads/: Bushra_Bashir_Tehsil_Monitor_CV.docx
(+97 files in other folders)
