[project]
name = "careerconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "docx>=0.2.4",
    "fastapi>=0.135.3",
    "flower>=2.0.1",
    "numpy>=1.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.12.5",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sentence-transformers>=2.7.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "pydantic-ai>=0.0.14",
    "aiohttp>=3.8.0",
]
